ingress/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: delivery-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - delivery-gateway
  http:
  - match:
    - uri:
        prefix: /payment
    rewrite:
        uri: /
    route:
    - destination:
        host: payment-svc
        port:
          number: 5000
  - match:
    - uri:
        prefix: /catalog
    rewrite:
        uri: /
    route:
    - destination:
        host: catalog-svc
        port:
          number: 5000
  - match:
    - uri:
        prefix: /orders
    rewrite:
        uri: /
    route:
    - destination:
        host: orders-svc
        port:
          number: 5000
